# rust-passman-cli

./: Cargo.toml  README.md
docs/: TODO.md
src/: main.rs
src/database/: crypt.rs  mod.rs  queries.rs
