[package]
name = "passman"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = "0.36"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"         # Authenticated AES encryption
aes = "0.8"
rand = "0.8"             # For secure random nonces
pbkdf2 = "0.12"          # Derive key from master password
sha2 = "0.10"            # Hash function for PBKDF2
base64 = "0.21"          # For storing binary data in SQLite
clap = { version = "4", features = ["derive"] }
rpassword = "7.3"
dirs-next = "2"
